fix(sticky-note): fix issue on FireFox (user was able to reduce the sticky note size)

--- a/src/less/stickies/sticky-note.less
+++ b/src/less/stickies/sticky-note.less
@@ -96,6 +96,8 @@
     padding: 0;
     background-color: transparent;
     font-family: "Comic Sans MS", cursive, sans-serif;
+    min-width: 200px;
+    min-height: 200px;
     &:focus {
       outline: none;
     }
